--- a/build.gradle
+++ b/build.gradle
@@ -47,4 +47,5 @@ apply plugin: 'war'
                 testCompile group: 'junit', name: 'junit', version: '4.12'
                 compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
                 compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
+                compile group: 'log4j', name: 'log4j', version: '1.2.17'
  }
