--- a/build.gradle
+++ b/build.gradle
@@ -42,10 +42,14 @@ apply plugin: 'war'
                 mavenCentral()
             }
 
-        dependencies {
-                testCompile group: 'junit', name: 'junit', version: '4.11'
-                testCompile group: 'junit', name: 'junit', version: '4.12'
-                compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
-                compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
-                compile group: 'log4j', name: 'log4j', version: '1.2.17'
+dependencies {
+        testCompile group: 'junit', name: 'junit', version: '4.11'
+        testCompile group: 'junit', name: 'junit', version: '4.12'
+        compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+        compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
+        compile group: 'log4j', name: 'log4j', version: '1.2.17'
+        compile group: 'org.springframework', name: 'spring-context', version: '4.3.5.RELEASE'
+        compile group: 'org.springframework', name: 'spring-web', version: '4.3.5.RELEASE'
+
+        compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.5.RELEASE'
  }
